gitignore, README.md 추가

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>MyLink</title>
 </head>
 <body>
-    
+    <main class="container">
+        <figure>
+            <img src="" alt="">
+        </figure>
+    </main>
 </body>
 </html>
