--- a/index.html
+++ b/index.html
@@ -5,12 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyLink</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <main class="container">
-        <figure>
-            <img src="" alt="">
-        </figure>
+        <div class="profile">
+            <figure>
+                <img src="./assets/dog.png" alt="프로필 이미지">
+            </figure>
+            <div class="profile__info">
+            <h2>안녕하세요</h2>
+            <p>코딩하는 웹디자이너 배현기입니다</p>
+        </div>
+        </div>
+        <ul class="link">
+            <li ><a href="">유튜브<img src="./assets/cheveron-right.png" alt="유튜브 바로가기"></a></li>
+            <li ><a href="">블로그<img src="./assets/cheveron-right.png" alt="블로그 바로가기"></a></li>
+            <li ><a href="">인스타그램<img src="./assets/cheveron-right.png" alt="인스타그램 바로가기"></a></li>
+        </ul>
+        <footer>
+            <a class="btn" href=""><img src="./assets/share.png" alt="공유하기">공유하기</a>
+            <a class="btn btn-black" href="mailto:gloomysight@naver.com"><img src="./assets/mail-open.png" alt="업무제안">업무제안</a>
+        </footer>
     </main>
 </body>
 </html>
