--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
         </div>
         </div>
         <ul class="link">
-            <li ><a href="">유튜브<img src="./assets/cheveron-right.png" alt="유튜브 바로가기"></a></li>
-            <li ><a href="">블로그<img src="./assets/cheveron-right.png" alt="블로그 바로가기"></a></li>
-            <li ><a href="">인스타그램<img src="./assets/cheveron-right.png" alt="인스타그램 바로가기"></a></li>
+            <li ><a href="https://www.youtube.com/channel/UCXx2n35vkgvseXTDnDYD8hA">유튜브<img src="./assets/cheveron-right.png" alt="유튜브 바로가기"></a></li>
+            <li ><a href="https://blog.naver.com/gloomysight">블로그<img src="./assets/cheveron-right.png" alt="블로그 바로가기"></a></li>
+            <li ><a href="https://www.instagram.com/baehyunki/">인스타그램<img src="./assets/cheveron-right.png" alt="인스타그램 바로가기"></a></li>
         </ul>
         <footer>
-            <a class="btn" href=""><img src="./assets/share.png" alt="공유하기">공유하기</a>
+            <a class="btn" id="share" href=""><img src="./assets/share.png" alt="공유하기">공유하기</a>
             <a class="btn btn-black" href="mailto:gloomysight@naver.com"><img src="./assets/mail-open.png" alt="업무제안">업무제안</a>
         </footer>
     </main>
+    <script src="./script.js"/>
 </body>
 </html>
