--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
             <a class="btn btn-black" href="mailto:gloomysight@naver.com"><img src="./assets/mail-open.png" alt="업무제안">업무제안</a>
         </footer>
     </main>
-    <script src="./script.js"/>
+    <script src="./script.js"></script>
 </body>
 </html>
