--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyLink</title>
     <link rel="stylesheet" href="./style.css">
+    <meta name="title" content="MyLink">
+    <meta name="description" content="직접 만들어 쓰는 프로필 링크">
+    <meta property="og:title" content="MyLink">
+    <meta property="og:description" content="직접 만들어 쓰는 프로필 링크">
+    <meta property="og:image" content="https://illustudio.github.io/mylink/assets/og_image.png"/>
+    <meta property="og:image:url" content="https://illustudio.github.io/mylink/assets/og_image.png"/>
+    <meta property="twitter:image" content="https://illustudio.github.io/mylink/assets/og_image.png"/>
 </head>
 <body>
     <main class="container">
